--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 ctf/artifacts/
+artifacts/
+ex/artifacts/
+inviter_presell/artifacts/
+learn/artifacts/
+liquidity-staker/artifacts/
+nft/artifacts/
+tools/artifacts/
+upgradeable/artifacts/
+worldcup/artifacts/
+
